tests/expression/list_faulty_contains.sy
start :: fn do
    a :: [1, 2, 3]
    (list.contains' a, 0) <=> false
    (list.contains' a, "123") <=> true
    (list.contains' a, 2) <=> "123"
end
// error: $Mismatch
